# iris-udl-to-xml

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: test-matrix.yml
src/: cvt_class.py  foreignkey.py  implementation.py  index.py  main.py  method.py  parameter.py  projection.py  property.py  query.py  split.py  storage.py  trigger.py  util.py  xdata.py
src/udl2xml/: __init__.py  cvt_class.py  cvt_routine.py  foreignkey.py  implementation.py  index.py  main.py  method.py  parameter.py  projection.py  property.py  query.py  split.py  storage.py  trigger.py  util.py  xdata.py
tests/: test_class_component.py  test_determine_type.py  test_encoding.py  test_foreignkey.py  test_implementation.py  test_index.py  test_method.py  test_outer.py  test_parameter.py  test_parse_class_line.py  test_projection.py  test_property.py  test_query.py  test_split.py  test_split_list.py  test_storage.py  test_trigger.py  test_util.py  test_xdata.py
