[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iris-udl-to-xml"
version = "0.1"
authors = [{name = "Gertjan Klein", email = "gklein@parvos.nl"}]
description = "Converts IRIS UDL input to XML export format."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]
dependencies = [
    "lxml >=5.2.2"
]

[project.urls]
Homepage = "https://github.com/gertjanklein/iris-udl-to-xml"
Issues = "https://github.com/gertjanklein/iris-udl-to-xml/issues"

[project.scripts]
udl2xml = "udl2xml.main:main"

[tool.flit.module]
name = "udl2xml"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = 'src'

